# macie

./: .env.example  .gitignore  Invoke-MACIERotation.ps1  README.md  audit_log.py  cli.py  install_autostart.ps1  macie.ps1  macie_autostart.bat  macie_config.py  macie_interactive.py  macie_web.py  patch_synthesizer.py  pyproject.toml  requirements.txt
.github/workflows/: purity-check.yml
core_shell/src/: __init__.py  audit.py  main.py  result_store.py
core_shell/tests/: test_scaffold.py
docs/: BINDING_DOCUMENTS.md  HOW_TO_USE.md  SPEC_AMENDMENT.md
engine/src/: __init__.py  consensus.py  consensus_types.py  synthesizer.py  synthesizer.py.bak
engine/src/adapters/: __init__.py  base.py  chatgpt_adapter.py  claude_adapter.py  gemini_adapter.py  router_adapter.py
engine/tests/: test_interface.py
governance/: audit-log.md
prod_shell/src/: __init__.py
prod_shell/tests/: test_isolation.py
registry/: registry.py
registry/tests/: test_registry.py
scripts/: check_engine_purity.py  install_pre_commit.sh
sfc_ai_router/: CLAUDE_CODE_PROMPT_PYTHON.md  __init__.py  audit.py  config.py  health.py  retry.py  router.py  types.py  utils.py
sfc_ai_router/adapters/: __init__.py  base.py  openrouter.py  providers.py
sfc_ai_router/tests/: test_router.py
